Avalara Fullqa/src/B2B Commerce/objects/E_SellerI18N__c.object
<CustomObject>
    <fields>
        <fullName>Locale__c</fullName>
        <description>The locale for which this localization applies. Localization follows the normal CloudCraze fallback rules.</description>
        <externalId>true</externalId>
        <label>Locale</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logo__c</fullName>
        <description>URL to the localized Seller logo for displaying on the Seller Detail page as well as in Seller listings.</description>
        <label>Logo</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>LongDesc__c</fullName>
        <description>Seller landing page localized description rich content.</description>
        <label>Long Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SearchTokens__c</fullName>
        <description>Localized search tokens.</description>
        <label>Search Tokens</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SellerI18NId__c</fullName>
        <description>External ID for integrations.</description>
        <externalId>true</externalId>
        <label>SellerI18N ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seller__c</fullName>
        <description>Seller this localization applies to.</description>
        <label>CC Seller</label>
        <referenceTo>E_Seller__c</referenceTo>
        <relationshipLabel>CC Seller I18Ns</relationshipLabel>
        <relationshipName>E_SellerI18Ns</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ShortDesc__c</fullName>
        <description>Localized short description to display on listings.</description>
        <label>Short Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>CC Seller I18N</label>
    <nameField>
        <label>CC Seller I18N Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CC Seller I18Ns</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>